feat: Add lombok and new service Excel
